Funcionalidades de Administrador y correcion de errores